--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "start": "node Backend/server.js",
-    "server": "nodemon Backend/server.js"
+    "server": "nodemon Backend/server.js",
+    "client": "npm run dev --prefix frontend",
+    "dev":"concurrently \"npm run server\"  \"npm run dev\" "
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "concurrently": "^9.2.1",
     "cookie-parser": "^1.4.7",
     "D": "^1.0.0",
     "dotenv": "^17.2.3",
