--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node Backend/server.js",
     "server": "nodemon Backend/server.js",
     "client": "npm run dev --prefix frontend",
-    "dev":"concurrently \"npm run server\"  \"npm run dev\" "
+    "dev": "concurrently \"npm run server\"  \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,6 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "concurrently": "^9.2.1",
     "cookie-parser": "^1.4.7",
     "D": "^1.0.0",
     "dotenv": "^17.2.3",
@@ -25,6 +24,7 @@
     "mongoose": "^8.19.2"
   },
   "devDependencies": {
+    "concurrently": "^9.2.1",
     "nodemon": "^3.1.10"
   }
 }
